feature: first version

--- a/package.json
+++ b/package.json
@@ -15,13 +15,15 @@
     "@expo/vector-icons": "^14.0.0",
     "@react-navigation/native": "^7.0.3",
     "expo": "^53.0.9",
+    "expo-audio": "~0.4.5",
+    "expo-av": "^15.1.4",
     "expo-constants": "~17.1.4",
     "expo-linking": "~7.1.4",
     "expo-router": "~5.0.3",
     "expo-status-bar": "~2.2.3",
     "expo-system-ui": "~5.0.6",
     "expo-web-browser": "~14.1.6",
-    "nativewind": "latest",
+    "nativewind": "^4.1.23",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-native": "0.79.2",
@@ -40,7 +42,7 @@
     "eslint-config-prettier": "^10.1.2",
     "prettier": "^3.2.5",
     "prettier-plugin-tailwindcss": "^0.5.11",
-    "tailwindcss": "^3.4.0",
+    "tailwindcss": "^3.4.17",
     "typescript": "~5.8.3"
   },
   "private": true
